...
    <string name="dismiss_review">Скрыть рецензию</string>
    <string name="review">Рецензия</string>
    <string name="collapse_contents">Свернуть оглавление</string>
    <string name="expand_contents">Развернуть оглавление</string>
    <string name="collapse_review_panel">Свернуть панель рецензии</string>
    <string name="expand_review_panel">Развернуть панель рецензии</string>
    <string name="open_review_panel">Открыть панель рецензии</string>

    <string name="deleted_source_text">Удалённый исходный текст: %1$s</string>
    <string name="added_replacement_text">Добавленный текст замены: %1$s</string>
    <string name="search_result">Результат поиска: %1$s</string>
    <string name="signal_description">Сигнал: %1$s</string>
    <string name="comment_description">Комментарий «%1$s». %2$s</string>
...
